# mcp-mpp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: API.md
mcp_mpp/: __init__.py  auth.py  client.py  probe.py  server.py
