[project]
name = "mcp-mpp"
version = "0.1.0"
description = "MCP server that submits football predictions to Mon Petit Prono (MPP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
mcp-mpp = "mcp_mpp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_mpp"]
